--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -31,7 +31,8 @@ android {
 
 dependencies {
 
-    implementation 'com.kuaishou:akdanmaku:1.0.3'
+    implementation project(path: ':library')
+    //implementation 'com.kuaishou:akdanmaku:1.0.3'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
